--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,10 +7,9 @@ name = "emt"
 description = "An energy measurement tool for machine learning related tasks"
 readme = "README.md"
 authors = [{ name = "Rameez Ismail", email = "rameez.ismail@philips.com" }]
-license = { text = "Copyright(c) 2023 Koninklijke Philips N.V." }
+license = { file = "LICENSE" }
 classifiers = [
-    #     "Environment :: GPU :: NVIDIA CUDA",
-    #     "License :: OSI Approved :: Apache Software License",
+    "License :: OSI Approved :: MIT License",
     "Intended Audience :: Developers",
     "Topic :: Scientific/Engineering :: Artificial Intelligence",
     "Programming Language :: Python :: 3.10+",
@@ -26,7 +25,7 @@ keywords = [
     "philips",
 ]
 requires-python = ">=3.10"
-dependencies = ["psutil", "numpy", "pandas", "pynvml"]
+dependencies = ["psutil", "numpy", "pandas", "pynvml", "tabulate"]
 dynamic = ["version"]
 
 [project.urls]
@@ -36,8 +35,8 @@ Repository = "https://github.com/philips-internal/energy-monitoring-tool"
 
 [project.optional-dependencies]
 dev = ["black"]
-test = ["tensorflow[and-cuda]", "pytest", "pytest-asyncio"]
-gui = ["dash"]
+gui = ["dash", "dash_bootstrap_components"]
+test = ["pytest", "pytest-asyncio", "torch", "tensorboard"]
 
 [tool.setuptools.packages.find]
 where = ["."]
