Feature/release workflow (#57)
* Create release.yml

* testing

* testing

* removed comments

* updated repository url to internal artifactory

* build and download dists

* building platform specific wheels

* running on ubuntu only

* matrix of platforms

* matrix of platforms

* pure python wheel

* credenitals added

* credenitals added

* credenitals added

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -59,3 +59,8 @@ exclude = '''
 '''
 [tool.coverage.run]
 omit = ["examples/*"]
+
+
+[tool.twine]
+repository = "https://your-company.jfrog.io/artifactory/api/pypi/your-repo-name"
+
