--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -17,7 +17,7 @@ permissions:
 
 jobs:
   CodeFormatter:
-    runs-on: [self-hosted, linux, x64, philips-code-hub, ubuntu-latest]
+    runs-on: [ubuntu-latest]
 
     steps:
       - name: Checkout Code
@@ -62,7 +62,7 @@ jobs:
           REVIEWDOG_GITHUB_API_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
   TestSuite:
-    runs-on: [self-hosted, linux, x64, philips-code-hub, ubuntu-latest]
+    runs-on: [ubuntu-latest]
     strategy:
       matrix:
         python-version: ["3.10", "3.11", "3.12"]
@@ -103,7 +103,7 @@ jobs:
           overwrite: true
 
   SonarQube:
-    runs-on: [self-hosted, linux, x64, philips-code-hub, ubuntu-latest]
+    runs-on: [ubuntu-latest]
     needs: TestSuite
     steps:
       - name: Checkout Code
