--- a/.github/workflows/release_request.yml
+++ b/.github/workflows/release_request.yml
@@ -17,7 +17,7 @@ permissions:
 
 jobs:
   build-wheel:
-    runs-on: [self-hosted, linux, x64, philips-code-hub, ubuntu-latest]
+    runs-on: [ubuntu-latest]
 
     steps:
       - uses: actions/checkout@v4
@@ -39,25 +39,31 @@ jobs:
           path: dist/
 
   pypi-publish:
-    runs-on: [self-hosted, linux, x64, philips-code-hub, ubuntu-latest]
-    needs:
-      - build-wheel
+      runs-on: ubuntu-latest
+      needs:
+        - build-wheel
+      permissions:
+        id-token: write
 
-    steps:
-      - name: Retrieve release distributions
-        uses: actions/download-artifact@v4
-        with:
-          name: emt-release-${{ github.sha }}
-          path: dist/
+      # Dedicated environments with protections for publishing are strongly recommended.
+      # For more information, see: https://docs.github.com/en/actions/deployment/targeting-different-environments/using-environments-for-deployment#deployment-protection-rules
+      environment:
+        name: pypi
+        # OPTIONAL: uncomment and update to include your PyPI project URL in the deployment status:
+        # url: https://pypi.org/p/YOURPROJECT
+        #
+        # ALTERNATIVE: if your GitHub Release name is the PyPI project version string
+        # ALTERNATIVE: exactly, uncomment the following line instead:
+        # url: https://pypi.org/project/YOURPROJECT/${{ github.event.release.name }}
 
-      - uses: actions/setup-python@v5
-        with:
-          python-version: "3.11"
+      steps:
+        - name: Retrieve release distributions
+          uses: actions/download-artifact@v4
+          with:
+            name: release-dists
+            path: dist/
 
-      - name: Publish to JFrog Artifactory PyPI
-        env:
-          TWINE_USERNAME: ${{ secrets.ARTIFACTORY_USERNAME }}
-          TWINE_PASSWORD: ${{ secrets.ARTIFACTORY_PASSWORD }}
-        run: |
-          python -m pip install twine
-          python -m twine upload --repository-url https://artifactory-ehv.ta.philips.com/artifactory/api/pypi/dl-innersource-pypi dist/*
+        - name: Publish release distributions to PyPI
+          uses: pypa/gh-action-pypi-publish@release/v1
+          with:
+            packages-dir: dist/
