--- a/.github/workflows/release_request.yml
+++ b/.github/workflows/release_request.yml
@@ -49,18 +49,13 @@ jobs:
       # For more information, see: https://docs.github.com/en/actions/deployment/targeting-different-environments/using-environments-for-deployment#deployment-protection-rules
       environment:
         name: pypi
-        # OPTIONAL: uncomment and update to include your PyPI project URL in the deployment status:
-        # url: https://pypi.org/p/YOURPROJECT
-        #
-        # ALTERNATIVE: if your GitHub Release name is the PyPI project version string
-        # ALTERNATIVE: exactly, uncomment the following line instead:
-        # url: https://pypi.org/project/YOURPROJECT/${{ github.event.release.name }}
+        url: https://pypi.org/project/emt/${{ github.event.release.name }}
 
       steps:
         - name: Retrieve release distributions
           uses: actions/download-artifact@v4
           with:
-            name: release-dists
+            name: emt-release-${{ github.sha }}
             path: dist/
 
         - name: Publish release distributions to PyPI
