--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,4 +1,4 @@
-sonar.projectKey=philips-internal.energy-monitoring-tool
+sonar.projectKey=palceholder
 sonar.python.version=3.10, 3.11, 3.12
 sonar.python.coverage.reportPaths=coverage.xml
 sonar.exclusions=examples/**
