Enhance settings.json with additional spell check words and improve shutdown documentation in power_group.py; refactor tensor_addition_torch.py for clarity and update optional dependencies in pyproject.toml.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
     "cSpell.words": [
         "astype",
+        "asyncio",
         "cuda",
         "cumsum",
         "dtype",
@@ -29,7 +30,9 @@
         "Qube",
         "Rameez",
         "RAPL",
-        "seperate"
+        "seperate",
+        "setuptools",
+        "tensorboard"
     ],
     "sonarlint.connectedMode.project": {
         "connectionId": "https-sonarqube-internal-philips",
