--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,4 +1,4 @@
-sonar.projectKey=palceholder
+sonar.projectKey=FairCompute_energy-monitoring-tool_0b11396c-f1bf-41be-910a-f93bbc56f045
 sonar.python.version=3.10, 3.11, 3.12
 sonar.python.coverage.reportPaths=coverage.xml
 sonar.exclusions=examples/**
