Update .gitignore to include Rust target directories and remove .rustc_info.json

--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,7 @@ emt/collector/core.*
 emt/collector/*.dSYM/
 emt/collector/*.pdb
 emt/collector/debug
+
+# Ignore all Rust target directories
+target/
+**/target/
