--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -80,7 +80,7 @@ jobs:
       - name: Install Dependencies
         run: |
           python --version
-          python -m pip install -e .[test,gui]
+          python -m pip install -e .[dev]
 
       - name: Pytest
         uses: microsoft/action-python@0.7.3
