Add documentation and configuration files for Energy Monitoring Tool (EMT)
- Introduced new documentation files: executive_summary.md, introduction.md, usage_modes.md, virtualization_challenges.md, virtualization_strategies.md, and conclusion.md.
- Updated mkdocs.yml for navigation and theming.
- Added logo and favicon assets.
- Enhanced pyproject.toml with new documentation dependencies.
- Updated pull_request.yml to include new environment variables for Cloudflare access.
- Expanded cSpell dictionary in settings.json for additional terms.

--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -122,6 +122,9 @@ jobs:
         env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
           SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}
+          CF_ACCESS_CLIENT_ID: ${{ secrets.CF_ACCESS_CLIENT_ID }}
+          CF_ACCESS_CLIENT_SECRET: ${{ secrets.CF_ACCESS_CLIENT_SECRET }}
+
 
       - name: Delete Coverage Report Artifact
         run: |
