--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -16,6 +16,8 @@
         "maxval",
         "microjoules",
         "minval",
+        "mkdocs",
+        "mkdocstrings",
         "newgrp",
         "numpy",
         "nvml",
@@ -28,6 +30,7 @@
         "psutil",
         "psys",
         "pycache",
+        "pymdown",
         "pynvml",
         "pyright",
         "pytest",
