Add "randint" to cSpell.words in settings.json

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -36,6 +36,7 @@
         "pytest",
         "Qube",
         "Rameez",
+        "randint",
         "RAPL",
         "reexec",
         "seperate",
