--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -55,6 +55,8 @@
         "reportUndefinedVariable": "none",
         "reportOptionalMemberAccess": "none"
     },
-    "python.linting.enabled": false,
-    "python.linting.pylintEnabled": false
+    "sonarlint.disableTelemetry": true,
+    "sonarlint.output.showAnalyzerLogs": true,
+    "sonarlint.output.showVerboseLogs": false,
+    "editor.formatOnSave": false
 }
