Update sonar-project.properties for improved configuration and exclusions

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,8 +1,11 @@
 sonar.projectKey=FairCompute_energy-monitoring-tool_0b11396c-f1bf-41be-910a-f93bbc56f045
-sonar.python.version=3.10, 3.11, 3.12
-sonar.python.coverage.reportPaths=coverage.xml
-sonar.exclusions=examples/**
-sonar.coverage.exclusions=examples/**
+sonar.sources=.
+sonar.host.url=https://sonar-ci-3f7k9v82.workstation-home.com
+sonar.python.version=3.10
+
+# Exclude documentation and assets
+sonar.exclusions=assets/**/*,docs/**/*,**/assets/**/*,**/docs/**/*
+sonar.coverage.exclusions=assets/**/*,docs/**/*,**/assets/**/*,**/docs/**/*
 sonar.cpd.exclusions=examples/**
 
 
