--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,10 +1,9 @@
 sonar.projectKey=FairCompute_energy-monitoring-tool_0b11396c-f1bf-41be-910a-f93bbc56f045
 sonar.sources=.
-sonar.python.version=3.11
+sonar.python.version=3.10
 
 # Exclude documentation and assets
-sonar.exclusions=assets/**/*,docs/**/*,**/assets/**/*,**/docs/**/*
-sonar.coverage.exclusions=assets/**/*,docs/**/*,**/assets/**/*,**/docs/**/*
+sonar.exclusions=assets/**/*,docs/**/*
 sonar.cpd.exclusions=examples/**
 
 
