--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -88,6 +88,7 @@ jobs:
           workdir: .
           python_version: ${{ matrix.python-version }}
           pytest: true
+          coverage: false # disable coverage here, it will be handled in a separate step
 
       - name: Coverage
         run: |
