Update coverage exclusions to include documentation files

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -5,6 +5,7 @@ sonar.python.coverage.reportPaths=coverage.xml
 
 # Exclude documentation and assets
 sonar.exclusions=assets/**/*,docs/**/*
+sonar.coverage.exclusions=examples/**/*,docs/**/*
 sonar.cpd.exclusions=examples/**
 
 
