--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -4,8 +4,8 @@ sonar.python.version=3.10, 3.11, 3.12
 sonar.python.coverage.reportPaths=coverage.xml
 
 # Exclude documentation and assets
-sonar.exclusions=assets/**/*,docs/**/*
+sonar.exclusions=assets/**/*,docs/**/*, examples/**/*
 sonar.coverage.exclusions=examples/**/*,docs/**/*
-sonar.cpd.exclusions=examples/**
+sonar.cpd.exclusions=examples/**/*,docs/**/*
 
 
