--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -4,8 +4,8 @@ sonar.python.version=3.10, 3.11, 3.12
 sonar.python.coverage.reportPaths=coverage.xml
 
 # Exclude documentation and assets
-sonar.exclusions=assets/**/*,docs/**/*, examples/**/*, docs/assets/**/*
-sonar.coverage.exclusions=examples/**/*,docs/**/*, assets/**/*, docs/assets/**/*
-sonar.cpd.exclusions=examples/**/*,docs/**/*, assets/**/*, docs/assets/**/*
+sonar.exclusions=assets/**/*,docs/**/*, examples/**/*, docs/assets/**/*, coverage-report*.xml
+sonar.coverage.exclusions=examples/**/*,docs/**/*, assets/**/*, docs/assets/**/*, coverage-report*.xml
+sonar.cpd.exclusions=examples/**/*,docs/**/*, assets/**/*, docs/assets/**/*, coverage-report*.xml
 
 
