Enhance logging setup and add tests for CLI and EnergyMeter
- Updated logging configuration to allow stdout logging in cli.py and energy_meter.py.
- Refactored logger initialization in various example scripts for consistency.
- Added tests for CLI commands and EnergyMeter functionality.
- Improved logging messages for better clarity and debugging.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,7 @@
     "cSpell.words": [
         "astype",
         "asyncio",
+        "crossentropy",
         "cuda",
         "cumsum",
         "dtype",
@@ -11,6 +12,7 @@
         "igpu",
         "igpus",
         "iterrows",
+        "keepdim",
         "levelname",
         "logdir",
         "maxval",
@@ -22,6 +24,8 @@
         "numpy",
         "nvml",
         "oneshot",
+        "PGCPU",
+        "PGGPU",
         "pids",
         "pmon",
         "powercap",
@@ -42,6 +46,7 @@
         "seperate",
         "setuptools",
         "tensorboard",
+        "tfevents",
         "usermod"
     ],
     "python.analysis.diagnosticSeverityOverrides": {
