added a single implementation for AsyncEnergyCollector templated with collector type

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -45,8 +45,10 @@
         "reexec",
         "seperate",
         "setuptools",
+        "sysinfo",
         "tensorboard",
         "tfevents",
+        "thiserror",
         "usermod"
     ],
     "python.analysis.diagnosticSeverityOverrides": {
