--- a/emt/rust/Cargo.toml
+++ b/emt/rust/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "emt_collector"
+name = "emt"
 version = "0.1.0"
 edition = "2024"
 
@@ -7,7 +7,11 @@ edition = "2024"
 async-trait = "0.1.88"
 log = "0.4.27"
 sysinfo = "0.35.1"
-tokio = { version = "1.45.1", features = ["full"] }
 env_logger = "0.10"
 users = "0.11"
 rand = "0.8"
+thiserror = "1.0"
+polars = "0.50.0"
+tokio = { version = "1.45.1", features = ["full"] }
+itertools = "0.14.0"
+
