--- a/assets/energy_access.service
+++ b/assets/energy_access.service
@@ -5,19 +5,10 @@ After=network.target
 
 [Service]
 Type=oneshot
-ExecStartPre=+\
-    /usr/bin/find /sys/devices/virtual/powercap -type d \
-    -exec chmod g+rx {} + \
-    -exec chown root:powercap {} +
-
-ExecStartPre=+\
-    /usr/bin/find /sys/devices/virtual/powercap -name energy_uj \
-    -exec chmod g+r {} + \
-    -exec chown root:powercap {} +
-
+ExecStartPre=+/usr/bin/find /sys/devices/virtual/powercap -type d -exec chmod g+rx {} + -exec chown root:powercap {} +
+ExecStartPre=+/usr/bin/find /sys/devices/virtual/powercap -name energy_uj -exec chmod g+r {} + -exec chown root:powercap {} +
 RemainAfterExit=yes
 ExecStart=/bin/true
-
 Group=powercap
 
 [Install]
