Switched out dependency pynvml for nvidia-ml-py (Addressed #17)

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,7 +19,7 @@ keywords = [
   "emt",
 ]
 requires-python = ">=3.10"
-dependencies = ["psutil", "numpy", "pandas", "pynvml", "tabulate", "click"]
+dependencies = ["psutil", "numpy", "pandas", "nvidia-ml-py", "tabulate", "click"]
 
 dynamic = ["version"]
 
