rearranged and cleanup: dummy_group removed

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -24,8 +24,6 @@
         "numpy",
         "nvml",
         "oneshot",
-        "PGCPU",
-        "PGGPU",
         "pids",
         "pmon",
         "powercap",
@@ -36,14 +34,10 @@
         "pycache",
         "pymdown",
         "pynvml",
-        "pyright",
         "pytest",
-        "Qube",
-        "Rameez",
         "randint",
         "RAPL",
         "reexec",
-        "seperate",
         "setuptools",
         "tensorboard",
         "tfevents",
@@ -57,14 +51,11 @@
         "reportOptionalMemberAccess": "none"
     },
     "sonarlint.disableTelemetry": true,
-    "sonarlint.output.showAnalyzerLogs": true,
     "sonarlint.output.showVerboseLogs": false,
     "editor.formatOnSave": false,
     "sonarlint.connectedMode.project": {
         "connectionId": "https-sonarqube-workstation-home-com",
         "projectKey": "FairCompute_energy-monitoring-tool_0b11396c-f1bf-41be-910a-f93bbc56f045"
     },
-    "python-envs.defaultEnvManager": "ms-python.python:conda",
-    "python-envs.defaultPackageManager": "ms-python.python:conda",
-    "python-envs.pythonProjects": []
+    "python.terminal.activateEnvironment": true
 }
